k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: workflow-builder

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: enterprise-workflow-builder-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5001
