k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: workflow-builder

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: enterprise-workflow-builder-frontend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          volumeMounts:
            - name: frontend-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js

      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config
