k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: workflow-builder

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
