k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: workflow-builder

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
